fix: #396
