# swagger/swagger.json
@@ -598,9 +598,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "base64 encoded string",
                         "schema": {
-                            "$ref": "#/definitions/api.DocGetResponse"
+                            "$ref": "#/definitions/api.DocGet"
                         }
                     },
                     "400": {
@@ -728,9 +728,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "array of base64 encoded string",
                         "schema": {
-                            "$ref": "#/definitions/api.DocFindResponse"
+                            "$ref": "#/definitions/api.DocFind"
                         }
                     },
                     "400": {
@@ -3701,28 +3701,22 @@
                 }
             }
         },
-        "api.DocFindResponse": {
+        "api.DocFind": {
             "type": "object",
             "properties": {
                 "docs": {
                     "type": "array",
                     "items": {
-                        "type": "array",
-                        "items": {
-                            "type": "integer"
-                        }
+                        "type": "string"
                     }
                 }
             }
         },
-        "api.DocGetResponse": {
+        "api.DocGet": {
             "type": "object",
             "properties": {
                 "doc": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
+                    "type": "string"
                 }
             }
         },
